--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "pm2 start dist/app.js",
     "dev": "tsx --watch src/app.ts"
   },
   "keywords": [],
