--- a/example.env
+++ b/example.env
@@ -2,4 +2,5 @@ CLICKHOUSE_HOST=http://localhost:8123
 CLICKHOUSE_USERNAME=default
 CLICKHOUSE_PASSWORD=default
 REDIS_URL=redis://localhost:6379
-AUTH_TOKEN=
+AUTH_TOKEN=***************************
+PORT=1377
